kubernetes/apps/security/crowdsec/app/cilium-bouncer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-cilium-bouncer
  namespace: security
  labels:
    app.kubernetes.io/name: crowdsec-cilium-bouncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crowdsec-cilium-bouncer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crowdsec-cilium-bouncer
    spec:
      serviceAccountName: crowdsec-cilium-bouncer
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: crowdsec-cilium-bouncer
          image: ghcr.io/hydazz/crowdsec-cilium-bouncer:0.0.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
