kubernetes/apps/security/crowdsec/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-blocklist-mirror
  namespace: security
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    gatus.home-operations.com/endpoint: |-
      group: security
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - crowdsec-mirror.${SECRET_DOMAIN} # yayamlls-disable-line
  rules:
    - backendRefs:
        - name: crowdsec-blocklist-mirror
          port: 8080
